force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>***DRAFT pending integration of Invoice records*** Integrated with M3; display only in Salesforce</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>I={00000}</displayFormat>
        <label>SF Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>