force-app/main/default/objects/Invoice__c/fields/Delivery_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Number__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Delivery Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>