force-app/main/default/objects/Invoice__c/fields/Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>Payer_Name__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Payer Name</label>
    <length>36</length>
    <type>Text</type>
</CustomField>