force-app/main/default/objects/Invoice__c/fields/Payer_Number__c.field-meta.xml
<CustomField>
    <fullName>Payer_Number__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Payer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>