force-app/main/default/objects/Invoice__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Warehouse</label>
    <length>3</length>
    <type>Text</type>
</CustomField>